@@ -1,3 +1,5 @@
+- Refactor: Declare execution year and degree in beans used for treasury reporting [#qubIT-Fenix-7272]
+
 12.9.3 (16-07-2025)
 - Bug Fix: Use the default tuition debit entry description format in creating debts manually [#qubIT-Fenix-7244]
 
